--- a/styles.css
+++ b/styles.css
@@ -982,5 +982,5 @@ mask-image: linear-gradient(to top, transparent 40%, #079097 80%) !important;
   }
 }
 .not-loaded * {
-  animation-play-state: paused !important;
+  animation-play-state: running !important;
 }
